--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "nodemon": "^3.0.1"
   }
 }
